--- a/Elemzes.rmd
+++ b/Elemzes.rmd
@@ -1,27 +1,39 @@
 ---
-title: "Elemzes"
-author: "Balint Mazzag"
-date: '2021 11 03 '
-output: github_document
+title: "3. Feladat"
+subtitle: "StatWars" 
+date: \today
+output: 
+  pdf_document: 
+    fig_caption: yes
+    toc: yes
+    toc_depth: 4
+header-includes:
+- \usepackage{fancyhdr}
+- \usepackage[hungarian]{babel}
+- \usepackage{natbib}
+- \pagestyle{fancy}
+- \fancyhf{}
+- \fancyhead[RE,LO]{\leftmark}
+- \fancyfoot[C]{\thepage}
+- \usepackage{lscape}
+- \usepackage{pdfpages}
 ---
+
+\pagebreak
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, dev = "cairo_pdf")
 ```
 
 ```{r}
+# setup ---------------------------------------------------------------------------------
+
 library(tidyverse)
 ```
 
-
-2. Hasonlítsák össze az oktatók (4-es csoport) és az ügyintézők (5 és 6-os csoport együtt) keresetek szerinti eloszlását a lehető legteljesebben!
-
-
-Az eredményeket foglalják össze, ahol annak helye van érzékeltessék ábrákkal! Igyekezzenek tömören, lényegretörően végezni a számításokat!
-Kérjük, egy word vagy pdf fájlban legyenek az eredmények, elemzések! Excelt, vagy más szoftvert természetesen használhatnak, de azok outputja ha feltétlenül kell, függelékként lehet az elemzésükben. 
-
-
 ```{r}
+# data ----------------------------------------------------------------------------------
+
 teacher_df <- readxl::read_excel("3. forduló STAT WARS UNI.xlsx", sheet = 2) %>% 
   mutate(
     nem = case_when(
@@ -32,52 +44,29 @@ teacher_df <- readxl::read_excel("3. forduló STAT WARS UNI.xlsx", sheet = 2) %>
     iskvegz = factor(iskvegz, levels = 1:3, ordered = TRUE),
     iskvegz = fct_relabel(iskvegz, function(l) {
       case_when(
-      l == 1 ~ "Legfeljebb érettségi",
-      l == 2 ~ "Főiskola/Bsc",
-      l == 3 ~ "Egyetem/Msc"
-    )}),
+        l == 1 ~ "Legfeljebb érettségi",
+        l == 2 ~ "Főiskola/Bsc",
+        l == 3 ~ "Egyetem/Msc"
+      )}),
     munkakor = factor(munkakor, levels = 7:1, ordered = TRUE),
     munkakor = fct_relabel(munkakor, function(l) {
-    case_when(
-      l == 1 ~ "Legfelsőbb vezető",
-      l == 2 ~ "Tanszék/intézetvezető",
-      l == 3 ~ "Egyéb (gazdasági, jogi, műszaki, stb.)",
-      l == 4 ~ "Egyetemi/főiskolai oktató/tanár",
-      l == 5 ~ "Magasan képzett ügyintéző",
-      l == 6 ~ "Ügyintéző/titkárnő",
-      l == 7 ~ "Betanított/segédmunkát végző"
-    )})
-  )
-
-```
-
-1. Az egyetemi főiskolai  oktatók/tanárok fizetése életkori csoportonként hogyan különbözik egymástól? Hasonlítsák össze valamilyen benchmark adattal, ezen az egyetemen mennyivel keresnek jobban/rosszabbul az egyetemi/főiskolai oktatók/tanárokéletkori csoportonkénti bontásban, mint az országos átlag?
-
-```{r}
-teacher_df <- teacher_df %>% 
-  mutate(
-    eletkor_group = cut(eletkor, breaks = c((1:7)*10, Inf), right = FALSE, 
-                        labels = FALSE),
-    eletkor_group = factor(eletkor_group, levels = 1:6, ordered = TRUE),
-    eletkor_group = fct_relabel(eletkor_group, function(l) {
       case_when(
-        l == 1 ~ "-19",
-        l == 7 ~ "70-",
-        TRUE ~ str_c(as.numeric(l)*10, "-", as.numeric(l) * 10 + 9)
-      )
-    })
+        l == 1 ~ "Legfelsőbb vezető",
+        l == 2 ~ "Tanszék/intézetvezető",
+        l == 3 ~ "Egyéb (gazdasági, jogi, műszaki, stb.)",
+        l == 4 ~ "Egyetemi/főiskolai oktató/tanár",
+        l == 5 ~ "Magasan képzett ügyintéző",
+        l == 6 ~ "Ügyintéző/titkárnő",
+        l == 7 ~ "Betanított/segédmunkát végző"
+      )})
   )
 ```
 
 ```{r}
-teacher_df %>% 
-  filter(munkakor == "Egyetemi/főiskolai oktató/tanár") %>% 
-  select(-eletkor, -munkakor) %>% 
-  GGally::ggpairs(aes(color = eletkor_group))
-```
+# utils ---------------------------------------------------------------------------------
 
-```{r}
 total_summarise <- function(x, g, ...) {
+  # original summarise function from tidyverse, but contains TOTAL row
   bind_rows(
     x %>% 
       group_by({{ g }}) %>% 
@@ -86,11 +75,90 @@ total_summarise <- function(x, g, ...) {
     x %>% 
       summarise(...) %>% 
       mutate(g = "Összesen") %>% 
-    select(g, everything()) %>% 
-    rename("{{ g }}" := 1)
+      select(g, everything()) %>% 
+      rename("{{ g }}" := 1)
   )
 }
 ```
+
+
+# 1. feladat 
+
+Az egyetemi főiskolai  oktatók/tanárok fizetése életkori csoportonként hogyan különbözik egymástól? Hasonlítsák össze valamilyen benchmark adattal, ezen az egyetemen mennyivel keresnek jobban/rosszabbul az egyetemi/főiskolai oktatók/tanárokéletkori csoportonkénti bontásban, mint az országos átlag?
+
+- [x] ábra a ksh összehasonlításról
+- [ ] kereset vs. eletkor boxplot
+
+```{r}
+national_avg <- rio::import("https://www.ksh.hu/stadat_files/mun/hu/mun0059.csv") %>% 
+  # download data from KSH website: https://www.ksh.hu/stadat_files/mun/hu/mun0059.html
+  tibble() %>% 
+  janitor::row_to_names(2) %>% 
+  select(2, starts_with("2020")) %>% 
+  rename_all(str_remove_all, "2020 Korcsoport ") %>% 
+  rename_all(str_remove_all, "2020 ") %>% 
+  rename(profession = 1, Összesen = Együtt) %>% 
+  filter(str_detect(profession, "Egyetemi")) %>% 
+  mutate_at(-1, str_remove, " ") %>% 
+  mutate_at(-1, as.numeric) %>% 
+  pivot_longer(-1, names_to = "eletkor_group") %>% 
+  select(-profession)
+```
+
+```{r}
+teacher_df <- teacher_df %>% 
+  mutate(
+    eletkor_group = cut(eletkor, breaks = c(c(0, 3, 4, 5)*10, Inf), right = FALSE, 
+                        labels = FALSE),
+    eletkor_group = factor(eletkor_group, levels = 1:4, ordered = TRUE),
+    eletkor_group = fct_relabel(eletkor_group, function(l) {
+      case_when(
+        l == 1 ~ "30 év alatt",
+        l == 2 ~ "30–39 éves",
+        l == 3 ~ "40–49 éves",
+        l == 4 ~ "50 év és afelett"
+      )
+    })
+  )
+```
+
+```{r}
+compare_df <- bind_rows(
+teacher_df %>% 
+  filter(munkakor == "Egyetemi/főiskolai oktató/tanár") %>% 
+  total_summarise(eletkor_group, 
+                  value = mean(kereset)*1e3, 
+                  s = sd(kereset*1e3),
+                  n = n()
+                  ) %>% 
+  mutate(type = "Minta"), # TODO név
+national_avg %>% 
+  mutate(type = "Nemzeti átlag", s = NA, n = NA) # TODO teljes munkaidő hipotézise
+) 
+```
+
+```{r}
+compare_df %>% 
+  mutate(
+    lb = value - s/(n^.5),
+    ub = value + s/(n^.5),
+  ) %>% 
+  ggplot() +
+  geom_linerange(aes(xmin = lb, xmax = ub, y = eletkor_group), 
+                 color = "cyan4", size = 2, alpha = .8) +
+  geom_point(aes(value, eletkor_group, fill = type), shape = 21, size = 4) +
+  scale_fill_manual(values = c("cyan4", "grey90"))
+```
+
+
+```{r}
+teacher_df %>% 
+  filter(munkakor == "Egyetemi/főiskolai oktató/tanár") %>% 
+  select(-eletkor, -munkakor) %>% 
+  GGally::ggpairs(aes(color = eletkor_group))
+```
+
+
 
 ```{r}
 total_summarise(teacher_df, eletkor_group, 
@@ -100,8 +168,15 @@ total_summarise(teacher_df, eletkor_group,
                 alpha3 = moments::skewness(kereset),
                 kurtosis = moments::kurtosis(kereset),
                 n = n()
-                )
+)
 ```
+
+2. Hasonlítsák össze az oktatók (4-es csoport) és az ügyintézők (5 és 6-os csoport együtt) keresetek szerinti eloszlását a lehető legteljesebben!
+
+
+Az eredményeket foglalják össze, ahol annak helye van érzékeltessék ábrákkal! Igyekezzenek tömören, lényegretörően végezni a számításokat!
+Kérjük, egy word vagy pdf fájlban legyenek az eredmények, elemzések! Excelt, vagy más szoftvert természetesen használhatnak, de azok outputja ha feltétlenül kell, függelékként lehet az elemzésükben. 
+
 
 ```{r}
 teacher_df %>% 
@@ -129,11 +204,12 @@ GGally::ggpairs(teacher_df, ggplot2::aes(colour=iskvegz))
 
 
 Oktatük és ügyintézők kereseti eloszlása
-```{r}
 
+```{r}
 teacher_df %>% 
   filter(
-    munkakor %in% c("Ügyintéző/titkárnő", "Magasan képzett ügyintéző", "Egyetemi/főiskolai oktató/tanár")
+    munkakor %in% c("Ügyintéző/titkárnő", "Magasan képzett ügyintéző",
+                    "Egyetemi/főiskolai oktató/tanár")
   ) %>% 
   mutate(munkakor_group = ifelse(
     munkakor == "Egyetemi/főiskolai oktató/tanár", "Oktató", "ügyintéző"
